--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
     <!-- Facebook & Twitter MetaData -->
     <meta
       property="og:title"
-      content="TomoWallet - The Secure Wallet for TomoChain"
+      content="TaoWallet - The Secure Wallet for Tao"
     />
     <meta
       property="og:description"
-      content="TomoWallet is a free, client-side interface helping you interact with TomoChain. Our easy-to-use, open-source platform allows you to generate wallets, interact with smart contracts, and so much more"
+      content="TaoWallet is a free, client-side interface helping you interact with Tao. Our easy-to-use, open-source platform allows you to generate wallets, interact with smart contracts, and so much more"
     />
     <meta
       property="og:image"
-      content="https://wallet.tomochain.com/public/imgs/wallet-web-thumbnail-v1.png"
+      content="https://wallet.tao.network/public/imgs/thumbnail.png"
     />
-    <meta property="og:url" content="https://wallet.tomochain.com/" />
+    <meta property="og:url" content="https://wallet.tao.network/" />
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="https://wallet.tomochain.com/public/imgs/favico.png"
+      href="https://wallet.tao.network/public/imgs/icon.png"
     />
     <!-- Bootstrap 4 CDN -->
     <link
